--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "populate:foods": "tsx scripts/populate-nigerian-foods.ts",
+    "upload:images": "tsx scripts/upload-product-images.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.7.0",
+    "@sanity/client": "^6.25.1",
     "@sanity/image-url": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "formidable": "^3.5.4",
     "lucide-react": "^0.574.0",
     "next": "15.2.3",
@@ -37,6 +41,7 @@
     "eslint-config-next": "15.2.3",
     "eslint-plugin-react": "^7",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "typescript": "^5",
     "typescript-eslint": "^8"
   }
