--- a/package.json
+++ b/package.json
@@ -19,23 +19,26 @@
     "dotenv": "^17.3.1",
     "formidable": "^3.5.4",
     "lucide-react": "^0.574.0",
-    "next": "15.2.3",
-    "next-sanity": "^9.0.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "^14.2.35",
+    "next-sanity": "^5.5.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.4",
     "recharts": "^3.7.0",
     "sanity": "^3.92.0",
     "sonner": "^2.0.7",
+    "styled-components": "^6.3.11",
     "tailwind-merge": "^3.4.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.28",
+    "@types/react-dom": "^18.3.7",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
