--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "populate:foods": "tsx scripts/populate-nigerian-foods.ts",
-    "upload:images": "tsx scripts/upload-product-images.ts"
+    "upload:images": "tsx scripts/upload-product-images.ts",
+    "add:nigerian-images": "tsx scripts/add-nigerian-food-images.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.7.0",
